--- a/Golf_Results_MVC/Golf_Results_MVC.csproj
+++ b/Golf_Results_MVC/Golf_Results_MVC.csproj
@@ -133,6 +133,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\CompetitionController.cs" />
     <Compile Include="Controllers\GolferController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="DAL\GolfContext.cs" />
@@ -187,6 +188,11 @@
     <Content Include="Views\Golfer\Details.cshtml" />
     <Content Include="Views\Golfer\Edit.cshtml" />
     <Content Include="Views\Golfer\Index.cshtml" />
+    <Content Include="Views\Competition\Create.cshtml" />
+    <Content Include="Views\Competition\Delete.cshtml" />
+    <Content Include="Views\Competition\Details.cshtml" />
+    <Content Include="Views\Competition\Edit.cshtml" />
+    <Content Include="Views\Competition\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
