--- a/Golf_Results_MVC/Golf_Results_MVC.csproj
+++ b/Golf_Results_MVC/Golf_Results_MVC.csproj
@@ -140,12 +140,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Api\CompetitionController.cs" />
+    <Compile Include="Api\CompResultController.cs" />
     <Compile Include="Api\GolferController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\CompetitionController.cs" />
+    <Compile Include="Controllers\CompResultController.cs" />
     <Compile Include="Controllers\GolferController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="DAL\GolfContext.cs" />
@@ -206,6 +208,12 @@
     <Content Include="Views\Competition\Edit.cshtml" />
     <Content Include="Views\Competition\Index.cshtml" />
     <Content Include="Views\Competition\AllYears.cshtml" />
+    <Content Include="Views\CompResult\Create.cshtml" />
+    <Content Include="Views\CompResult\Delete.cshtml" />
+    <Content Include="Views\CompResult\Details.cshtml" />
+    <Content Include="Views\CompResult\Edit.cshtml" />
+    <Content Include="Views\CompResult\Index.cshtml" />
+    <Content Include="Views\Competition\DetailsforComp.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
