Added Upload for Comp

--- a/Golf_Results_MVC/Golf_Results_MVC.csproj
+++ b/Golf_Results_MVC/Golf_Results_MVC.csproj
@@ -214,6 +214,7 @@
     <Content Include="Views\Competition\DetailsforComp.cshtml" />
     <Content Include="Views\CompResult\ResultUploaded.cshtml" />
     <Content Include="Views\Import\UploadGolfers.cshtml" />
+    <Content Include="Views\Import\UploadComps.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
