Add CompResult Upload method to import controller and view

--- a/Golf_Results_MVC/Golf_Results_MVC.csproj
+++ b/Golf_Results_MVC/Golf_Results_MVC.csproj
@@ -215,6 +215,7 @@
     <Content Include="Views\CompResult\ResultUploaded.cshtml" />
     <Content Include="Views\Import\UploadGolfers.cshtml" />
     <Content Include="Views\Import\UploadComps.cshtml" />
+    <Content Include="Views\Import\UploadCompResults.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
