--- a/Golf_Results_MVC/packages.config
+++ b/Golf_Results_MVC/packages.config
@@ -46,6 +46,7 @@
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.1.0" targetFramework="net472" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.Google" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Microsoft.Win32.Registry" version="4.5.0" targetFramework="net472" />
