Add reference to common.css and amended my css in this.

--- a/Golf_Results_MVC/Golf_Results_MVC.csproj
+++ b/Golf_Results_MVC/Golf_Results_MVC.csproj
@@ -324,11 +324,29 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\common.css" />
     <Content Include="Content\PagedList.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\Golf1.jpg" />
+    <Content Include="Images\Golf10.jpg" />
+    <Content Include="Images\Golf11.jpg" />
+    <Content Include="Images\Golf12.png" />
+    <Content Include="Images\Golf13.png" />
+    <Content Include="Images\Golf14.png" />
+    <Content Include="Images\Golf15.png" />
+    <Content Include="Images\Golf16.jpg" />
+    <Content Include="Images\Golf17.jpg" />
+    <Content Include="Images\Golf2.jpg" />
+    <Content Include="Images\Golf3.jpg" />
+    <Content Include="Images\Golf4.jpg" />
+    <Content Include="Images\Golf5.jpg" />
+    <Content Include="Images\Golf6.jpg" />
+    <Content Include="Images\Golf7.jpg" />
+    <Content Include="Images\Golf8.jpg" />
+    <Content Include="Images\Golf9.PNG" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
