Enabled code first migrations and moved the data seed into Configuration.cs and commented out the GolfInitialiser class

--- a/Golf_Results_MVC/Web.config
+++ b/Golf_Results_MVC/Web.config
@@ -9,7 +9,7 @@
         <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </configSections>
   <connectionStrings>
-    <add name="GolfContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=GolfResults1;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="GolfContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=GolfResults2;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -77,11 +77,11 @@
     </compilers>
   </system.codedom>
   <entityFramework>
-     <contexts>
+     <!--<contexts> Comment out before code first migration and adding to Azure
        <context type="Golf_Results_MVC.DAL.GolfContext, Golf_Results_MVC">
         <databaseInitializer type="Golf_Results_MVC.DAL.GolfInitializer, Golf_Results_MVC" />
        </context>
-     </contexts>
+     </contexts>-->
      <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="v11.0" />
