--- a/Golf_Results_MVC/Golf_Results_MVC.csproj
+++ b/Golf_Results_MVC/Golf_Results_MVC.csproj
@@ -314,6 +314,11 @@
     </Compile>
     <Compile Include="Logging\ILogger.cs" />
     <Compile Include="Logging\Logger.cs" />
+    <Compile Include="Migrations\202004191816061_InitialCreate.cs" />
+    <Compile Include="Migrations\202004191816061_InitialCreate.designer.cs">
+      <DependentUpon>202004191816061_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Competition.cs" />
     <Compile Include="Models\Comp_Result.cs" />
@@ -433,6 +438,11 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202004191816061_InitialCreate.resx">
+      <DependentUpon>202004191816061_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
