--- a/Golf_Results_MVC/Golf_Results_MVC.csproj
+++ b/Golf_Results_MVC/Golf_Results_MVC.csproj
@@ -326,6 +326,10 @@
     <Compile Include="Migrations\202004201913390_Enabling users.designer.cs">
       <DependentUpon>202004201913390_Enabling users.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202004241050548_Updated Name validations to increase max and min size.cs" />
+    <Compile Include="Migrations\202004241050548_Updated Name validations to increase max and min size.designer.cs">
+      <DependentUpon>202004241050548_Updated Name validations to increase max and min size.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Competition.cs" />
@@ -458,6 +462,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202004201913390_Enabling users.resx">
       <DependentUpon>202004201913390_Enabling users.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004241050548_Updated Name validations to increase max and min size.resx">
+      <DependentUpon>202004241050548_Updated Name validations to increase max and min size.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
