--- a/Golf_Results_MVC/Golf_Results_MVC.csproj
+++ b/Golf_Results_MVC/Golf_Results_MVC.csproj
@@ -349,8 +349,11 @@
   <ItemGroup>
     <Content Include="Content\bootstrap-cerulean.css" />
     <Content Include="Content\bootstrap-cosmo.css" />
+    <Content Include="Content\Bootstrap-darkly.css" />
     <Content Include="Content\bootstrap-lumen.css" />
+    <Content Include="Content\Bootstrap-paper.css" />
     <Content Include="Content\bootstrap-readable.css" />
+    <Content Include="Content\Bootstrap-slate.css" />
     <Content Include="Content\Bootstrap-superhero.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
