Updated images and css for 3 Jumbotron sections

--- a/Golf_Results_MVC/Golf_Results_MVC.csproj
+++ b/Golf_Results_MVC/Golf_Results_MVC.csproj
@@ -365,6 +365,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\competitions.jpg" />
     <Content Include="Images\Golf-reworked.jpg" />
     <Content Include="Images\Golf-reworked2.jpg" />
     <Content Include="Images\Golf1.jpg" />
@@ -384,11 +385,13 @@
     <Content Include="Images\Golf7.jpg" />
     <Content Include="Images\Golf8.jpg" />
     <Content Include="Images\Golf9.PNG" />
+    <Content Include="Images\golfers.jpeg" />
     <Content Include="Images\Golfers1.jpg" />
     <Content Include="Images\Golfers2.jpg" />
     <Content Include="Images\Golfers3.jpg" />
     <Content Include="Images\Golfers4.jpg" />
     <Content Include="Images\Golfers5.jpg" />
+    <Content Include="Images\home.jpg" />
     <Content Include="Images\pexels-golf-1.jpeg" />
     <Content Include="Images\pexels-golf-3.jpeg" />
     <Content Include="Images\pexels-golf-4.jpeg" />
@@ -398,6 +401,7 @@
     <Content Include="Images\pexels-golf2.jpeg" />
     <Content Include="Images\Pexels7.jpg" />
     <Content Include="Images\Pexels8.jpg" />
+    <Content Include="Images\spare.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Properties\PublishProfiles\GolfResultsMVC20200419073955 - Web Deploy.pubxml" />
