Removed unnessary line in web.config

--- a/Golf_Results_MVC/Web.config
+++ b/Golf_Results_MVC/Web.config
@@ -10,8 +10,7 @@
     </configSections>
   <connectionStrings>
     <add name="GolfContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=GolfResults2;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
-    <!--<add name="GolfContext" connectionString="Data Source=tcp:x00152190server.database.windows.net,1433;Initial Catalog=GolfContext;Persist Security Info=False;User ID=X00152190;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />-->
-    <!--<add name="GolfContext_DatabasePublish" connectionString="Data Source=tcp:x00152190server.database.windows.net,1433;Initial Catalog=GolfContext;User ID=X00152190@x00152190server.database.windows.net;Password=Ameobi55!" providerName="System.Data.SqlClient" />-->
+    <!--<add name="GolfContext_DatabasePublish" connectionString="Data Source=tcp:x00152190server.database.windows.net,1433;Initial Catalog=GolfContext;User ID=X00152190@x00152190server.database.windows.net;Password={password}" providerName="System.Data.SqlClient" />--><!-- Azure connection string add password (added in settings when publishing so not needed here).-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
